Graph Editor Modifiers UI Bug #92293

Closed
opened 2021-10-17 17:29:12 +02:00 by Riccardo Fasoli · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0
Graphics card: gtx1080

Blender Version
Broken: 3.0.0 Alpha, branch: master, commit date: 2021-10-16 12:26, hash: 4a00faca1a, type: release

Caused by c7d94a7827 (the name cropping)

Short description of error
Graph editor modifiers name seems limited to few characters (Cycl..., Lim..., Envelo...).
Also, right clicking the modifier header and selecting "Pin", makes the Pin symbol appear over the [X].
image.png
I tried to change both the panel size and the panel UI scale and the amount of name letters flickers until a certain zoom where the whole name is displayed.
image.png
The pin Symbol has a fixed position, so reducing the panel size make it slide over the other UI.
image.png

Exact steps for others to reproduce the error

  • Just assign a modifier to any action in graph editor.
**System Information** Operating system: Windows-10-10.0.19041-SP0 Graphics card: gtx1080 **Blender Version** Broken: 3.0.0 Alpha, branch: master, commit date: 2021-10-16 12:26, hash: 4a00faca1a5e, type: release Caused by c7d94a7827 (the name cropping) **Short description of error** Graph editor modifiers name seems limited to few characters (Cycl..., Lim..., Envelo...). Also, right clicking the modifier header and selecting "Pin", makes the Pin symbol appear over the [X]. ![image.png](https://archive.blender.org/developer/F11212512/image.png) I tried to change both the panel size and the panel UI scale and the amount of name letters flickers until a certain zoom where the whole name is displayed. ![image.png](https://archive.blender.org/developer/F11212572/image.png) The pin Symbol has a fixed position, so reducing the panel size make it slide over the other UI. ![image.png](https://archive.blender.org/developer/F11212587/image.png) **Exact steps for others to reproduce the error** - Just assign a modifier to any action in graph editor.

Added subscriber: @fasoric.vj

Added subscriber: @fasoric.vj
Riccardo Fasoli changed title from Graph Editor Modifier UI Bug to Graph Editor Modifiers UI Bug 2021-10-17 17:32:29 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm. And the name issue seems to be a regression.

Thanks for the report, I can confirm. And the name issue seems to be a regression.
Philipp Oeser self-assigned this 2021-10-22 13:03:38 +02:00

This issue was referenced by 7ac4e874db

This issue was referenced by 7ac4e874db5a176429da2cf869b0552a24ef0b3e
Philipp Oeser removed their assignment 2021-10-22 16:28:38 +02:00
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

The name cropping was caused by c7d94a7827, I tried looking at the code here and ui_text_pad_none with .text is too low. .75 seems better, but the cause for having to add a margin at all is a mystery to me...

CC @ideasman42

The name cropping was caused by c7d94a7827, I tried looking at the code here and `ui_text_pad_none` with `.text` is too low. `.75` seems better, but the cause for having to add a margin at all is a mystery to me... CC @ideasman42
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I tried looking at the code here and ui_text_pad_none with .text is too low. .75 seems better,

May also fix: #92361 (Resizing a node shifts socket label text 'eating' characters)

> I tried looking at the code here and `ui_text_pad_none` with `.text` is too low. .75 seems better, May also fix: #92361 (Resizing a node shifts socket label text 'eating' characters)
Campbell Barton self-assigned this 2021-10-25 09:36:53 +02:00

This issue was referenced by 5c2330203e

This issue was referenced by 5c2330203e11e0d916960218b07d88d2193bf526

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92293
No description provided.